# vision_work

./: .gitignore  README.md
arrow_detection/: CMakeLists.txt
arrow_detection/include/: arrow_processing.hpp  debuging.hpp
arrow_detection/src/: arrow_processing.cpp  debuging.cpp  main.cpp
doppleganger_list/: .gitignore  CMakeLists.txt  face_recognition_dl.cpp
doppleganger_list/include/: face_recognition_dl.hpp
doppleganger_list/include/image_stat/: image_stat.hpp
doppleganger_list/src/image_stat/: image_stat.cpp
face_recognition/: .gitignore  CMakeLists.txt
face_recognition/results/: MI_pos45_neg45_.fig
face_recognition/src/: debuging.cpp  debuging.h  face_recognition.cpp  face_recognition.hpp  main.cpp
face_recognition/src/image_stat/: image_stat.cpp  image_stat.hpp
pedistrian_detection/: .gitignore  CMakeLists.txt
pedistrian_detection/script/: INRIAPerson  neg.txt  opencv_createsample  opencv_traincascade  pos.txt  train_cascase.sh
pedistrian_detection/script/pedestrian_classifier/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
pedistrian_detection/src/: detect_pedestrian.cpp
